Fix warnings in GPU Process code when RELEASE_LOG_DISABLED https://bugs.webkit.org/show_bug.cgi?id=259003

Reviewed by Chris Dumez.

Guard code with checks for whether `RELEASE_LOG_DISABLED` is enabled.

* Source/WebKit/WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.cpp:
(WebKit::RemoteDisplayListRecorderProxy::send):
(WebKit::RemoteDisplayListRecorderProxy::sendSync):
* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp:
(WebKit::RemoteImageBufferProxy::ensureBackendCreated const):

Canonical link: https://commits.webkit.org/265950@main